# M2IDI_CV16

./: .gitignore  .gitmodules  CMakeLists.txt  MIDIBUS_CV16.atsln  MIDIBUS_CV16.componentinfo.xml  MIDIBUS_CV16.cppproj  README.md  main.cpp
MIDIBUS_CV16/: GenericOutput.cpp  GenericOutput.h  LEDMatrix.cpp  LEDMatrix.h  MIDIBUS_CV16.cppproj  MIDI_Config.h  PWM.cpp  PWM.h  main.cpp  menu.cpp  menu.h
MIDIBUS_CV16/src/config/: conf_clocks.h
legacy/: LEDMatrix.cpp  main.cpp  menu.cpp  menu.h
lib/: CMakeLists.txt
src/: MIDI_Config.h  board_m2idi_cv16.h  dac_spi.cpp  dac_spi.h  dac_spi.pio  generic_output.cpp  generic_output.h  led_matrix.cpp  led_matrix.h  main.cpp  memory.cpp  memory.h  menu.cpp  menu.h  midi_config.h  ptest.py  ring_buffer.h  rp_rand.cpp  rp_rand.h
